[package]
name = "cc_validator"
version = "0.1.0"
edition = "2021"
authors = ["Juan Rada Leon"]
description = "Credit card validation library for Rust - work in progress"
license = "MIT"
keywords = ["credit-card", "validation", "luhn", "payment"]
categories = ["authentication", "finance"]
repository = "https://github.com/jmrada14/cc_validator"
homepage = "https://github.com/jmrada14/cc_validator"
readme = "README.md"

[dependencies]
zeroize = { version = "1.7", features = ["derive"] }

# Optional: BIN database support
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
csv = { version = "1.3", optional = true }
rusqlite = { version = "0.31", optional = true }

# Optional: Parallel batch processing
rayon = { version = "1.10", optional = true }

# Optional: Card number generation (for testing)
rand = { version = "0.8", optional = true }

# Optional: CLI tool
clap = { version = "4.4", features = ["derive"], optional = true }

# Optional: WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Optional: REST API server
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
utoipa = { version = "4", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "7", features = ["axum"], optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
rand = "0.8"

[features]
default = []
bin-json = ["serde", "serde_json"]
bin-csv = ["serde", "csv"]
bin-sqlite = ["rusqlite"]
parallel = ["rayon"]
simd = []  # Requires nightly: #![feature(portable_simd)]
generate = ["rand"]  # Card number generation
cli = ["clap", "generate"]  # CLI tool
wasm = ["wasm-bindgen", "js-sys"]  # WASM support
server = ["axum", "tokio", "tower-http", "tracing", "tracing-subscriber", "serde", "serde_json", "generate", "utoipa", "utoipa-swagger-ui"]  # REST API server

# Enable all BIN database features
bin-all = ["bin-json", "bin-csv", "bin-sqlite"]

# Full feature set
full = ["bin-all", "parallel", "simd", "generate"]

[[bin]]
name = "ccvalidator"
path = "src/bin/ccvalidator.rs"
required-features = ["cli"]

[[bin]]
name = "ccvalidator-server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "generate"
required-features = ["generate"]
