[package]
name = "cc-validator-node"
version = "0.1.0"
edition = "2021"
description = "Node.js bindings for cc_validator - enterprise-grade credit card validation"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cc_validator = { path = "..", features = ["generate"] }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
